# linux-shell

./: CMakeLists.txt  README.md  builtin.cpp  builtin.hpp  main.cpp  pipe.cpp  pipe.hpp
include/: pipe.hpp
src/: main.cpp  pipe.cpp
